docs/assets/css/style.scss
---
---

@import 'jekyll-theme-leap-day';

#banner {
    background: #134181;
    border: 1px solid #134181;
    right: 0;
    margin-right: 0;

    /* I think this is what actually controls the position of the repo button */
    /* .fork {
        position: unset;
        left: unset;
        margin-left: unset;    
        float: right;  
    } */
}

.wrapper {
    width: unset;
    margin:0 25px 0 230px;
    position:relative;
}

section {
    width: unset;
    /* margin-top: 75px; */
}      

nav {
    /* top: 75px; */
    /* top: 170px; */
    /* text-align: left; */
    margin-left: 0px;
    width: 215px;
    position: fixed;
    left: 0;
}

footer {
    /* text-align: left; */
    margin-left: 25px;
    width: 185px;
    position: fixed;
    left: 0;
    bottom: 0;
}

